Update more classes to use Lombok